# QtDeviceMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CHANGELOG.md  virtual_serial_device.py
src/: main.cpp
src/alarm/: AlarmChecker.cpp  AlarmChecker.h
src/comm/: SerialComm.cpp  SerialComm.h  TcpComm.cpp  TcpComm.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: DeviceMonitorController.cpp  DeviceMonitorController.h
src/data/: DataParser.cpp  DataParser.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseWorker.cpp  DatabaseWorker.h  DeviceData.h
src/mock/: MockDataFormulas.h  MockDataGenerator.cpp  MockDataGenerator.h  VirtualTcpDevice.cpp  VirtualTcpDevice.h
src/ui/: AlarmHistoryDialog.cpp  AlarmHistoryDialog.h  ChartWidget.cpp  ChartWidget.h  HistoryDialog.cpp  HistoryDialog.h  SerialConfigDialog.cpp  SerialConfigDialog.h  SettingsDialog.cpp  SettingsDialog.h  mainwindow.cpp  mainwindow.h
src/utils/: LogManager.cpp  LogManager.h
tests/: CMakeLists.txt  tst_alarmchecker.cpp  tst_databasemanager.cpp  tst_dataparser.cpp
virtual_device/: CMakeLists.txt  VirtualDeviceWindow.cpp  VirtualDeviceWindow.h  main.cpp
